--- a/01_mpox-ve-data-quality_prelim-report.Rmd
+++ b/01_mpox-ve-data-quality_prelim-report.Rmd
@@ -56,7 +56,18 @@ Examine data quality, clean data, and create analysis variables.
                  gtsummary,    # publication-ready analytical and summary tables
                  tableone,     # Creates 'Table 1', i.e., description of baseline patient characteristics
                  stargazer,    # provides a way to create publication quality tables
-                 plotly        # creates interactive web-based graphs 
+                 plotly,        # creates interactive web-based graphs 
+                 geepack,
+                 broom,
+                 sjPlot,   # to visualizing mixed-effects models
+                 effects,   # to visualizing mixed-effects models
+                 lme4,      # "golden standard" for mixed-effects modelling in R (no p-values,
+                lmerTest,  # p-values for MEMs based on the Satterthwaite approximation
+                report,    # mainly for an "report" function
+                emmeans,   # post-hoc analysis
+                knitr,     # beautifying tables
+                sjstats,   # ICC - intraclass-correlation coefficient
+                caret     # ML, model comparison & utility functions
 
                  
   )
@@ -237,6 +248,57 @@ mpoxve <- raw %>%
                                      TRUE ~ as.Date(NA)),
   
   index_yrmo = format_ISO8601(index_date, precision = "ym"),
+  index_epiyr   = epiyear(index_date),
+  index_epiwk   = epiweek(index_date),
+  index_epiyrwk_2 = fct_relevel(as_factor(case_when(index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(33, 34)~ "2022: 33-34",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(35, 36)~ "2022: 35-36",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(37, 38)~ "2022: 37-38",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(39, 40)~ "2022: 39-40",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(41, 42)~ "2022: 41-42",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(43, 44)~ "2022: 43-44",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(45, 46)~ "2022: 45-46",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(47, 48)~ "2022: 47-48",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(49, 50)~ "2022: 49-50",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(51, 52)~ "2022: 51-52",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(1, 2)  ~  "2023: 1-2",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(3, 4)  ~  "2023: 3-4",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(5, 6)  ~  "2023: 5-6",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(7, 8)  ~  "2023: 7-8",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(9, 10)  ~ "2023: 9-10"))),
+  
+  index_epiyrwk_4 = fct_relevel(as_factor(case_when(index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(33, 34, 35, 36)~ "2022: 33-36",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(37, 38, 39, 40)~ "2022: 37-40",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(41, 42, 43, 44)~ "2022: 41-44",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(45, 46, 47, 48)~ "2022: 45-48",
+                                                               index_epiyr == 2022 &
+                                                                 index_epiwk %in% c(49, 50, 51, 52)~ "2022: 49-52",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(1, 2, 3, 4)  ~  "2023: 1-4",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(5, 6, 7, 8)  ~  "2023: 5-8",
+                                                               index_epiyr == 2023 &
+                                                                 index_epiwk %in% c(9, 10, 11, 12)  ~ "2023: 9-12"))),
+  
+  
   #==== Vaccination Status ----
           # Combine site- and self-reported vaccination dose variables
           vax1_yesno = case_when((is.na(dose1_yesno) & !is.na(first_dose_yesno)) |
@@ -277,7 +339,7 @@ mpoxve <- raw %>%
                                                      ((vax1_yesno == 1 & vax2_yesno != 1 &   # 1 dose partial (1st dose but no 2nd dose)
                                                         dose1index_days >= 14) |
                                                        (vax1_yesno == 1 & vax2_yesno == 1 &  # D1 is <24 days before D2
-                                                          dose1index_days >= 14 &          
+                                                          dose1index_days >= 14 &      
                                                           dose_int <24) |
                                                        (vax2_yesno == 1 &                  # 2 doses partial
                                                           dose1index_days >= 14 &          # (dose 2-index date interval < 14 days )
@@ -421,11 +483,9 @@ mpoxve <- raw %>%
               # Age categorical
               age_cat = fct_relevel(as_factor(case_when(age %in% c(18:29) ~ "18-29",
                                                         age %in% c(30:39) ~ "30-39",
-                                                        age %in% c(40:49) ~ "40-49",
-                                                        age == 50   ~ "50",
-                                                        age >= 51    ~ "\u226551", #There are a couple people with age >49
+                                                        age >=40 ~ "40-49",
                                                             TRUE ~ as.character(NA))),
-                                        "18-29", "30-39", "40-49",  "50", "\u226551"),
+                                        "18-29", "30-39", "40-49"),
   
           
     
@@ -451,12 +511,24 @@ mpoxve <- raw %>%
 
 
             #race-ethnicity: ethnicity (1, Hispanic or Latino | 2, Not Hispanic or Latino | 3, Prefer not to answer)
-            race_ethn = fct_relevel(as_factor(case_when((ethnicity ==1 & race_cat == "African American or Black") ~ "Hispanic, Black",
-                                                        (ethnicity ==1 & race_cat == "White") ~ "Hispanic, White",
-                                                        (ethnicity ==2 & race_cat == "African American or Black") ~ "Non-Hispanic, Black",
-                                                        (ethnicity ==2 & race_cat == "White") ~ "Non-Hispanic, White",
-                                                        TRUE ~ as.character("Other"))), 
-                                    "Non-Hispanic, Black", "Hispanic, Black", "Non-Hispanic, White", "Hispanic, White", "Other"),
+            race_ethn_cat = fct_relevel(as_factor(case_when(ethnicity == 1 ~ "Hispanic",
+                                                        race_cat == "White" ~ "White",
+                                                        race_cat == "African American or Black" ~ "Black",
+                                                        race_cat == "Asian" ~ "Asian",
+                                                        race_cat == "Native Hawaiin/Pacific Islander" ~ "Native Hawaiin/Pacific Islander",
+                                                        race_cat == "American Indian/Alaska Native" ~ "American Indian/Alaska Native",
+                                                        race_cat == "Multiracial" ~ "Multiracial",
+                                                        
+                                                        TRUE ~ as.character("Other"))),
+                                        "Black", "White", "Hispanic", "Asian",
+                                   "Native Hawaiin/Pacific Islander", "American Indian/Alaska Native", "Multiracial", "Other"),
+  
+            race_ethn = fct_relevel(as_factor(case_when(ethnicity == 1 ~ "Hispanic",
+                                                        race_cat == "White" ~ "White",
+                                                        race_cat == "African American or Black" ~ "Black",
+                                                        TRUE ~ as.character("Other"))),
+                                        "Black", "White", "Hispanic", "Other"),
+  
   
   
   # Length of Hospitalization - Examine if length of days of hospitalization is longer than
@@ -489,10 +561,12 @@ mpoxve <- raw %>%
           sex_part_num = ifelse(caco == "Case", sex_part_num_case, 
                                ifelse(caco == "Control", sex_part_num_control, NA)),
           sex_part_num_cat = fct_relevel(as_factor(case_when(sex_part_num == 0 ~ "0",
-                                                            sex_part_num %in% c(1:3) ~ "1-3",
+                                                            sex_part_num == 1 ~ "1",
+                                                            sex_part_num == 2 ~ "2",
+                                                            sex_part_num == 3 ~ "3",
                                                             sex_part_num >= 4 ~ "\u22654",
                                                             TRUE ~ as.character(NA))),
-                                         "0", "1-3", "\u22654"),
+                                         "0", "1", "2", "3", "\u22654"),
       
            
       
@@ -520,17 +594,19 @@ mpoxve <- raw %>%
                                                              close_contact_dx == 3 ~ "Don't know",
                                                              TRUE ~ as.character(NA))),
                                          "Yes", "No","Don't know")
+  
+      # time period matching
       # close ------
        
             ) %>% 
-  select(pid, jid, everything(), -redcap_data_access_group)
-
-# checks ----------  
+  select(pid, jid, everything(), -redcap_data_access_group) 
       
-aa <- mpoxve %>% 
-        filter(minset_vars == "Complete") %>%
-        pfreq(caco, immunocompromised, hiv_status)
-        select(pid, case_yesno, test_result_date, symptoms_date, clinic_date, control_visit_date)
+  #export as csv 
+      
+      # analysis <- mpoxve %>% 
+      #   filter(minset_vars == "Complete")
+      # write.csv(analysis, "data/mpoxve_analysis_2023-02-09.csv")
+   
       
 ```
 
@@ -722,28 +798,28 @@ mpoxve %>%
 
 ```
 
-### **Table 11. VE model adjustment variables **
+<!-- ### **Table 11. VE model adjustment variables ** -->
 
-```{r}
+<!-- ```{r} -->
 
-mpoxve %>%
-  filter(minset_vars == "Complete" & jid == "MN") %>%
-  select(caco, index_yrmo) %>%
-  tbl_summary(
-    by = caco,
-    label = list(index_yrmo ~ "Year-Month"),
-    missing = "always",
-    missing_text = "Missing"
+<!-- mpoxve %>% -->
+<!--   filter(minset_vars == "Complete" & jid == "MN") %>% -->
+<!--   select(caco, index_yrmo) %>% -->
+<!--   tbl_summary( -->
+<!--     by = caco, -->
+<!--     label = list(index_yrmo ~ "Year-Month"), -->
+<!--     missing = "always", -->
+<!--     missing_text = "Missing" -->
 
-  )  %>%
-  add_n() %>%
-  add_overall() %>% 
-  modify_header(label = "**Minnesota: time period match**") %>%
-  bold_labels()
+<!--   )  %>% -->
+<!--   add_n() %>% -->
+<!--   add_overall() %>%  -->
+<!--   modify_header(label = "**Minnesota: time period match**") %>% -->
+<!--   bold_labels() -->
 
 
 
-```
+<!-- ``` -->
 
 <!-- ## **Part 3: Vaccination related variables**  -->
 
